# lrdbench

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  RESEARCH_USAGE.md  SPECIFICATION.md  lrdbench_repo_schema.txt  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: benchmark_submission.md  estimator_validation.md
.github/workflows/: docs.yml  package.yml  release.yml  tests.yml
configs/contracts/: public_output_contract.json
configs/suites/: benchmark_rs_gph.yaml  public_medium_canonical_ground_truth.yaml  public_medium_null_false_positive.yaml  public_medium_sensitivity_disagreement.yaml  public_medium_stress_contamination.yaml  public_small_canonical_ground_truth.yaml  public_small_null_false_positive.yaml  public_small_sensitivity_disagreement.yaml  public_small_stress_contamination.yaml  smoke_ground_truth.yaml  smoke_observational.yaml  smoke_stress_test.yaml
configs/suites/data/: smoke_series.csv
configs/suites/paper/: canonical_ground_truth.yaml  null_false_positive.yaml  sensitivity_disagreement.yaml  stress_contamination.yaml
docs/: adding_estimators.md  architecture.md  benchmark_protocol.md  citation.md  contributor_checklist.md  design_specification.md  development_handoff.md  estimator_contract.md  estimator_status.md  failure_mode_taxonomy.md  governance.md  index.md  installation.md  interpretation_semantics.md  known_limitations.md  leaderboard_submission_policy.md  migration.md  output_contract.md  paper_workflow.md  public_medium_outputs.md  public_release_roadmap.md  public_small_outputs.md  readthedocs.md  release_candidate_freeze.md  reproducibility.md  research_notebooks.md  research_usage.md  third_party_estimators.md
docs/reference/: api.md
docs/tutorials/: custom_estimator.md  ground_truth_benchmark.md  observational_data.md  quickstart.md  reading_outputs.md  reproducibility_checklist.md  stress_testing.md
examples/: custom_csv_data.py  custom_estimator.py  custom_estimator_benchmark.py  quickstart_contaminated.py  quickstart_observational.py  quickstart_pure.py
notebooks/: 01_ground_truth_benchmark_design.ipynb  02_stress_testing_robustness.ipynb  03_observational_csv_workflow.ipynb  04_custom_estimator_comparison.ipynb  README.md
paper_support/: __init__.py  run_paper_suites.py
src/lrdbench/: __init__.py  bootstrap.py  defaults.py  enums.py  evaluator.py  execution.py  failure_modes.py  interfaces.py  leaderboard.py  manifest.py  metrics_catalog.py  observational_sources.py  output_contract.py  public_assets.py  registries.py  reporter.py  result_store.py  runner.py  schema.py  strata.py  testing.py  validation.py
src/lrdbench/cli/: __init__.py  main.py
src/lrdbench/contaminations/: __init__.py  _common.py  heavy_tail.py  level_shift.py  outliers.py  polynomial.py
src/lrdbench/estimators/: __init__.py  _fit_utils.py  geometric.py  gph.py  rs.py  spectral.py  temporal.py  wavelet.py
src/lrdbench/examples/: __init__.py  custom_estimator.py
src/lrdbench/generators/: __init__.py  _signal.py  arfima.py  fbm.py  fgn.py  fou.py  mrw.py
tests/: conftest.py
tests/integration/: test_custom_estimator_workflow.py  test_failure_maps.py  test_paper_workflow.py  test_phase2_uncertainty.py  test_phase3_stress.py  test_phase4_generators.py  test_phase4_observational.py  test_phase5_execution.py  test_phase6_sensitivity.py  test_phase7_benchmark_uncertainty.py  test_research_notebooks.py  test_smoke_run.py  test_tutorial_examples.py
tests/statistical/: test_estimator_validation.py  test_generator_validation.py
tests/unit/: test_benchmark_uncertainty.py  test_bootstrap.py  test_cli.py  test_contaminations.py  test_custom_estimator_example.py  test_estimator_disagreement_metrics.py  test_estimators_extended.py  test_execution.py  test_failure_modes.py  test_false_positive_metrics.py  test_generators_extended.py  test_leaderboard.py  test_manifest_validation.py  test_observational_sources.py  test_output_contract.py  test_reporter.py  test_scale_window_sensitivity.py  test_schema.py  test_testing_utils.py
